--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "cross-env INIT_CWD=$PWD next build && cross-env NODE_OPTIONS='--experimental-json-modules' node ./scripts/postbuild.mjs",
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
-    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts"
+    "lint": "next lint --fix --dir pages --dir app --dir components --dir lib --dir layouts --dir scripts",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css,json,md}\"",
+    "format": "yarn prettier && yarn lint"
   },
   "dependencies": {
     "@next/bundle-analyzer": "14.1.0",
